--- a/trunk/VFS.Server.Core/VFS.Server.Core.csproj
+++ b/trunk/VFS.Server.Core/VFS.Server.Core.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <Compile Include="Commands\BaseCommand.cs" />
     <Compile Include="Commands\Impl\CDCommand.cs" />
+    <Compile Include="Commands\Impl\PRINTCommand.cs" />
+    <Compile Include="Commands\Impl\COPYCommand.cs" />
+    <Compile Include="Commands\Impl\MOVECommand.cs" />
+    <Compile Include="Commands\Impl\UNLOCKCommand.cs" />
+    <Compile Include="Commands\Impl\LOCKCommand.cs" />
+    <Compile Include="Commands\Impl\DELCommand.cs" />
     <Compile Include="Commands\Impl\MFCommand.cs" />
     <Compile Include="Commands\Impl\DelTreeCommand.cs" />
     <Compile Include="Commands\Impl\RDCommand.cs" />
@@ -59,6 +65,7 @@
     <Compile Include="FS\IFile.cs" />
     <Compile Include="FS\IFSManager.cs" />
     <Compile Include="FS\Impl\VFSDirectory.cs" />
+    <Compile Include="FS\Impl\VFSFile.cs" />
     <Compile Include="FS\Impl\VFSManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserContextFactory.cs" />
