--- a/trunk/VFS.Server.Core/VFS.Server.Core.csproj
+++ b/trunk/VFS.Server.Core/VFS.Server.Core.csproj
@@ -45,28 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\BaseCommand.cs" />
-    <Compile Include="Commands\Impl\CDCommand.cs" />
-    <Compile Include="Commands\Impl\PRINTCommand.cs" />
-    <Compile Include="Commands\Impl\COPYCommand.cs" />
-    <Compile Include="Commands\Impl\MOVECommand.cs" />
-    <Compile Include="Commands\Impl\UNLOCKCommand.cs" />
-    <Compile Include="Commands\Impl\LOCKCommand.cs" />
-    <Compile Include="Commands\Impl\DELCommand.cs" />
-    <Compile Include="Commands\Impl\MFCommand.cs" />
-    <Compile Include="Commands\Impl\DelTreeCommand.cs" />
-    <Compile Include="Commands\Impl\RDCommand.cs" />
     <Compile Include="Commands\UserContext.cs" />
     <Compile Include="Commands\CommandContext.cs" />
-    <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="Commands\Impl\MDCommand.cs" />
-    <Compile Include="FS\DirectoryAlreadyExistsException.cs" />
+    <Compile Include="Exceptions\FSException.cs" />
+    <Compile Include="ExtenstionMethods.cs" />
     <Compile Include="FS\IDirectory.cs" />
     <Compile Include="FS\IFile.cs" />
-    <Compile Include="FS\IFSManager.cs" />
+    <Compile Include="FS\IFSEngine.cs" />
     <Compile Include="FS\Impl\VFSDirectory.cs" />
+    <Compile Include="FS\Impl\VFSEngine.cs" />
     <Compile Include="FS\Impl\VFSFile.cs" />
-    <Compile Include="FS\Impl\VFSManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserContextFactory.cs" />
   </ItemGroup>
