--- a/trunk/VFS.Server.Core/VFS.Server.Core.csproj
+++ b/trunk/VFS.Server.Core/VFS.Server.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="FS\Impl\VFSEngine.cs" />
     <Compile Include="FS\Impl\VFSFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerConsole.cs" />
     <Compile Include="UserContextFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
