--- a/trunk/VFS.Tests/VFS.Tests.csproj
+++ b/trunk/VFS.Tests/VFS.Tests.csproj
@@ -36,6 +36,10 @@
       <HintPath>..\..\Lib\FluentAssertions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Moq, Version=4.0.10827.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Lib\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -54,6 +58,7 @@
     <Compile Include="Server\Core\FS\VFSEngineTest.cs" />
     <Compile Include="Server\Core\FS\VFSManagerTest.cs" />
     <Compile Include="Server\Core\FS\VFSDirectoryTest.cs" />
+    <Compile Include="Server\Core\ServerConsoleTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AuthoringTests.txt" />
