[+] Add authentication manager
git-svn-id: http://svn.1gb.ru/aleks/VFS@8 0c0f27c7-30c0-3d43-b135-6f678797f20e

--- a/trunk/VFS.Server.Core/VFS.Server.Core.csproj
+++ b/trunk/VFS.Server.Core/VFS.Server.Core.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthenticationManager.cs" />
     <Compile Include="Commands\UserContext.cs" />
     <Compile Include="Commands\CommandContext.cs" />
+    <Compile Include="CommonContext.cs" />
     <Compile Include="Exceptions\FSException.cs" />
     <Compile Include="ExtenstionMethods.cs" />
     <Compile Include="FS\IDirectory.cs" />
