--- a/trunk/VFS.Server.Console/VFS.Server.Console.csproj
+++ b/trunk/VFS.Server.Console/VFS.Server.Console.csproj
@@ -54,14 +54,17 @@
     <Compile Include="Protocol\RemoteConsole.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VFS.Contract\VFS.Contract.csproj">
+    <ProjectReference Include="..\VFS.Contract\VFS.Common.csproj">
       <Project>{D5351D28-1933-4787-ADDC-B8968300833E}</Project>
-      <Name>VFS.Contract</Name>
+      <Name>VFS.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\VFS.Server.Core\VFS.Server.Core.csproj">
       <Project>{2D95CA9A-CE82-4949-A373-70E66E9D9FD9}</Project>
       <Name>VFS.Server.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
