--- a/trunk/VFS.Server.Core/VFS.Server.Core.csproj
+++ b/trunk/VFS.Server.Core/VFS.Server.Core.csproj
@@ -45,12 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthenticationManager.cs" />
-    <Compile Include="Commands\UserContext.cs" />
-    <Compile Include="Commands\CommandContext.cs" />
-    <Compile Include="CommonContext.cs" />
+    <Compile Include="Contexts\UserContext.cs" />
+    <Compile Include="Contexts\CommandContext.cs" />
     <Compile Include="Exceptions\FSException.cs" />
-    <Compile Include="ExtenstionMethods.cs" />
+    <Compile Include="Extension\ExtenstionMethods.cs" />
     <Compile Include="FS\IDirectory.cs" />
     <Compile Include="FS\IFile.cs" />
     <Compile Include="FS\IFSEngine.cs" />
@@ -59,7 +57,6 @@
     <Compile Include="FS\Impl\VFSFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerConsole.cs" />
-    <Compile Include="UserContextFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
