--- a/trunk/VFS.Server.WinService/VFS.Server.WinService.csproj
+++ b/trunk/VFS.Server.WinService/VFS.Server.WinService.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2D95CA9A-CE82-4949-A373-70E66E9D9FD9}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{AA6212A0-6DFB-4B70-BF09-9399A89F0EEC}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VFS.Server.Core</RootNamespace>
-    <AssemblyName>VFS.Server.Core</AssemblyName>
+    <RootNamespace>VFS.Server.WinService</RootNamespace>
+    <AssemblyName>VFS.Server.WinService</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,9 +32,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -42,23 +44,29 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contexts\UserContext.cs" />
-    <Compile Include="Contexts\CommandContext.cs" />
-    <Compile Include="Exceptions\FewArgumentsException.cs" />
-    <Compile Include="Exceptions\FSException.cs" />
-    <Compile Include="Extension\ExtenstionMethods.cs" />
-    <Compile Include="FS\IDirectory.cs" />
-    <Compile Include="FS\IFile.cs" />
-    <Compile Include="FS\IFSEngine.cs" />
-    <Compile Include="FS\Impl\VFSDirectory.cs" />
-    <Compile Include="FS\Impl\VFSEngine.cs" />
-    <Compile Include="FS\Impl\VFSFile.cs" />
-    <Compile Include="HandleResult.cs" />
+    <Compile Include="ProjectInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ProjectInstaller.Designer.cs">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Service1.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Service1.Designer.cs">
+      <DependentUpon>Service1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerConsole.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ProjectInstaller.resx">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
