--- a/trunk/VFS.Server.Core/VFS.Server.Core.csproj
+++ b/trunk/VFS.Server.Core/VFS.Server.Core.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Response.cs" />
     <Compile Include="Contexts\UserContext.cs" />
     <Compile Include="Contexts\CommandContext.cs" />
     <Compile Include="Exceptions\FewArgumentsException.cs" />
@@ -56,7 +57,6 @@
     <Compile Include="FS\Impl\VFSDirectory.cs" />
     <Compile Include="FS\Impl\VFSEngine.cs" />
     <Compile Include="FS\Impl\VFSFile.cs" />
-    <Compile Include="HandleResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerConsole.cs" />
   </ItemGroup>
