--- a/trunk/VFS.Server.WinService/VFS.Server.WinService.csproj
+++ b/trunk/VFS.Server.WinService/VFS.Server.WinService.csproj
@@ -37,6 +37,9 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Management" />
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -54,6 +57,8 @@
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
+    <Compile Include="Protocol\ConnectedUser.cs" />
+    <Compile Include="Protocol\RemoteConsole.cs" />
     <Compile Include="Service1.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -67,6 +72,16 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VFS.Contract\VFS.Common.csproj">
+      <Project>{D5351D28-1933-4787-ADDC-B8968300833E}</Project>
+      <Name>VFS.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VFS.Server.Core\VFS.Server.Core.csproj">
+      <Project>{2D95CA9A-CE82-4949-A373-70E66E9D9FD9}</Project>
+      <Name>VFS.Server.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
