--- a/trunk/VFS.Client/App.config
+++ b/trunk/VFS.Client/App.config
@@ -8,7 +8,7 @@
   <system.serviceModel>
     <client>
       <endpoint name="RemoteConsole"
-                contract="VFS.Contract.IRemoteConsole"
+                contract="VFS.Common.IRemoteConsole"
                 binding="netTcpBinding"
                  />
       
